:art: update Sidebar styles; change text color to improve visibility and fix background color formatting

--- a/src/assets/sass/components/ui/_sidebar.scss
+++ b/src/assets/sass/components/ui/_sidebar.scss
@@ -21,7 +21,7 @@
 		display: flex;
 		align-items: center;
 		gap: 0.5rem;
-		color: var(--text_color02);
+		color: var(--text_color04);
 		padding: 0.4rem 0.8rem;
 		border-radius: 0.75rem;
 		font-size: 1.65rem;
@@ -33,7 +33,7 @@
 	}
 
 	.selected {
-		background-color: var(--bg_color02	);
+		background-color: var(--bg_color02);
 		color: var(--text_color03);
 	}
 	.sidebar__menu{
